# semantic_tagger

./: README.md  create_tags.ipynb  pyproject.toml
scripts/: finetune.py  tag_data.py  test_data.py
semtag/: cfg.py  data.py  dpo_training.py  similarity.py  tagger.py
